--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="principal_color">#E10F0F</color>
     <color name="second_color">#FF4747</color>
     <color name="gray">#323232</color>
+    <color name="gray_light">#BDBDBD</color>
     <color name="color_hint">#434343</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
