--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,28 @@
         </item>
     </style>
 
-    <style name="editText">
+    <style name="title2">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+    </style>
+
+    <style name="editTextRed">
         <item name="android:layout_width">
             match_parent
         </item>
@@ -61,10 +82,160 @@
             @color/color_hint
         </item>
         <item name="android:background">
-            @drawable/rounded_edittext
+            @drawable/edittext_red
         </item>
         <item name="android:layout_marginBottom">
             20dp
+        </item>
+    </style>
+
+    <style name="editTextGray">
+        <item name="android:layout_width">
+            match_parent
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:padding">
+            10dp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textColorHint">
+            @color/gray_light
+        </item>
+        <item name="android:background">
+            @drawable/edittext_gray
+        </item>
+        <item name="android:layout_marginBottom">
+            20dp
+        </item>
+        <item name="android:layout_marginTop">
+            20dp
+        </item>
+    </style>
+
+    <style name="editTextGray1">
+        <item name="android:layout_width">
+            200dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:padding">
+            10dp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textColorHint">
+            @color/gray_light
+        </item>
+        <item name="android:background">
+            @drawable/edittext_gray
+        </item>
+        <item name="android:layout_marginBottom">
+            20dp
+        </item>
+    </style>
+
+    <style name="editTextGray2">
+        <item name="android:layout_width">
+            150dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:padding">
+            10dp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textColorHint">
+            @color/gray_light
+        </item>
+        <item name="android:background">
+            @drawable/edittext_gray
+        </item>
+        <item name="android:layout_marginBottom">
+            20dp
+        </item>
+        <item name="android:layout_marginLeft">
+            20dp
+        </item>
+    </style>
+
+    <style name="buttonformaspagto">
+        <item name="android:layout_width">
+            match_parent
+        </item>
+        <item name="android:layout_height">
+            match_parent
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="textAllCaps">
+            false
+        </item>
+        <item name="android:gravity">
+            left
+        </item>
+        <item name="android:backgroundTint">
+            @color/white
+        </item>
+        <item name="android:stateListAnimator">
+            @null
+        </item>
+        <item name="android:layout_marginTop">
+            6dp
+        </item>
+    </style>
+
+    <style name="textviewred">
+        <item name="android:layout_width">
+            match_parent
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/second_color
+        </item>
+        <item name="android:layout_marginStart">
+            5dp
         </item>
     </style>
 
@@ -73,7 +244,7 @@
             @color/second_color
         </item>
         <item name="android:background">
-            @drawable/rounded_edittext
+            @drawable/edittext_red
         </item>
         <item name="android:fontFamily">
             @font/poppins
@@ -95,6 +266,33 @@
         </item>
         <item name="android:layout_marginStart">
             230dp
+        </item>
+    </style>
+
+    <style name="buttonSalvar">
+        <item name="backgroundTint">
+            @color/second_color
+        </item>
+        <item name="android:background">
+            @drawable/edittext_red
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textColor">
+            @color/white
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="textAllCaps">
+            false
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:padding">
+            0dp
         </item>
     </style>
 </resources>
