--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,6 +59,36 @@
         </item>
     </style>
 
+    <style name="titlePagamento">
+        <item name="android:layout_width">
+            250dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            30sp
+        </item>
+        <item name="android:textColor">
+            @color/principal_color
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:layout_marginLeft">
+            30dp
+        </item>
+        <item name="android:layout_marginTop">
+            50dp
+        </item>
+        <item name="android:layout_marginBottom">
+            40dp
+        </item>
+    </style>
+
     <style name="editTextRed">
         <item name="android:layout_width">
             match_parent
@@ -185,39 +215,6 @@
         </item>
     </style>
 
-    <style name="buttonformaspagto">
-        <item name="android:layout_width">
-            match_parent
-        </item>
-        <item name="android:layout_height">
-            match_parent
-        </item>
-        <item name="android:fontFamily">
-            @font/poppins
-        </item>
-        <item name="android:textSize">
-            12sp
-        </item>
-        <item name="android:textColor">
-            @color/black
-        </item>
-        <item name="textAllCaps">
-            false
-        </item>
-        <item name="android:gravity">
-            left
-        </item>
-        <item name="android:backgroundTint">
-            @color/white
-        </item>
-        <item name="android:stateListAnimator">
-            @null
-        </item>
-        <item name="android:layout_marginTop">
-            6dp
-        </item>
-    </style>
-
     <style name="textviewred">
         <item name="android:layout_width">
             match_parent
@@ -236,6 +233,51 @@
         </item>
         <item name="android:layout_marginStart">
             5dp
+        </item>
+    </style>
+
+    <style name="textviewgray">
+        <item name="android:layout_width">
+            250dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:textColor">
+            @color/gray
+        </item>
+        <item name="android:layout_marginLeft">
+            30dp
+        </item>
+    </style>
+
+    <style name="textviewwhite">
+        <item name="android:layout_width">
+            250dp
+        </item>
+        <item name="android:layout_height">
+            50dp
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:textColor">
+            @color/white
+        </item>
+        <item name="android:layout_marginLeft">
+            30dp
         </item>
     </style>
 
@@ -293,6 +335,39 @@
         </item>
         <item name="android:padding">
             0dp
+        </item>
+    </style>
+
+    <style name="buttonformaspagto">
+        <item name="android:layout_width">
+            match_parent
+        </item>
+        <item name="android:layout_height">
+            match_parent
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="textAllCaps">
+            false
+        </item>
+        <item name="android:gravity">
+            left
+        </item>
+        <item name="android:backgroundTint">
+            @color/white
+        </item>
+        <item name="android:stateListAnimator">
+            @null
+        </item>
+        <item name="android:layout_marginTop">
+            6dp
         </item>
     </style>
 </resources>
