--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,33 @@
         </item>
     </style>
 
+    <style name="titlePerfil">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            24sp
+        </item>
+        <item name="android:textColor">
+            @color/principal_color
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:layout_marginBottom">
+            10dp
+        </item>
+        <item name="android:layout_marginTop">
+            50dp
+        </item>
+    </style>
+
     <style name="editTextRed">
         <item name="android:layout_width">
             match_parent
@@ -278,6 +305,42 @@
         </item>
         <item name="android:layout_marginLeft">
             30dp
+        </item>
+    </style>
+
+    <style name="textviewblack">
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+    </style>
+
+    <style name="textviewblackbold">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textStyle">
+            bold
         </item>
     </style>
 
