--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,6 +116,29 @@
         </item>
     </style>
 
+    <style name="title3">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            24sp
+        </item>
+        <item name="android:textColor">
+            @color/black
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:padding">
+            20dp
+        </item>
+    </style>
     <style name="editTextRed">
         <item name="android:layout_width">
             match_parent
@@ -284,6 +307,75 @@
         </item>
     </style>
 
+    <style name="textviewgray2">
+        <item name="android:layout_width">
+            250dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/color_hint
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:layout_marginTop">
+            15dp
+        </item>
+    </style>
+
+    <style name="textviewgray3">
+        <item name="android:layout_width">
+            250dp
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            @color/color_hint
+        </item>
+        <item name="android:layout_marginTop">
+            10dp
+        </item>
+    </style>
+
+    <style name="textviewgray4">
+        <item name="android:layout_width">
+            wrap_content
+        </item>
+        <item name="android:layout_height">
+            wrap_content
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            @color/gray_light
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="android:layout_marginTop">
+            5dp
+        </item>
+    </style>
+
     <style name="textviewwhite">
         <item name="android:layout_width">
             250dp
@@ -398,6 +490,42 @@
         </item>
         <item name="android:padding">
             0dp
+        </item>
+    </style>
+
+    <style name="buttonAdicionar">
+        <item name="android:layout_width">
+            190dp
+        </item>
+        <item name="android:layout_height">
+            35dp
+        </item>
+        <item name="backgroundTint">
+            @drawable/edittext_red
+        </item>
+        <item name="android:background">
+            @drawable/edittext_red
+        </item>
+        <item name="android:fontFamily">
+            @font/poppins
+        </item>
+        <item name="android:textColor">
+            @color/second_color
+        </item>
+        <item name="android:textStyle">
+            bold
+        </item>
+        <item name="textAllCaps">
+            false
+        </item>
+        <item name="android:textSize">
+            14sp
+        </item>
+        <item name="android:padding">
+            0dp
+        </item>
+        <item name="android:layout_marginTop">
+            10dp
         </item>
     </style>
 
