--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,21 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activities.MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
-            android:paddingHorizontal="30dp"
             android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -26,7 +31,7 @@
             <TextView
                 android:id="@+id/txtTituloCadastro"
                 style="@style/title1"
-                android:text="@string/cadastre_se"/>
+                android:text="@string/cadastre_se" />
 
             <EditText
                 android:id="@+id/edtxtNome"
@@ -79,6 +84,8 @@
                 style="@style/buttonCadastrar"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="150dp"
                 android:text="@string/cadastrar" />
 
             <ImageView
