--- a/app/src/main/res/layout/listview_produto.xml
+++ b/app/src/main/res/layout/listview_produto.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="20dp">
@@ -33,6 +34,7 @@
                     android:text="@string/nome_do_produto" />
 
                 <TextView
+                    android:id="@+id/txtDescrProduto"
                     style="@style/textviewblack"
                     android:layout_width="265dp"
                     android:layout_height="75dp"
