--- a/app/src/main/res/layout/activity_categoria.xml
+++ b/app/src/main/res/layout/activity_categoria.xml
@@ -36,7 +36,7 @@
             <ListView
                 android:id="@+id/listviewCategoria"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="761dp" />
         </LinearLayout>
     </ScrollView>
 
