--- a/app/src/main/res/layout/activity_categoria.xml
+++ b/app/src/main/res/layout/activity_categoria.xml
@@ -14,31 +14,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
+        android:layout_marginBottom="60dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/txtCategoria"
+            style="@style/title3"
+            android:text="@string/categoria" />
 
-            <TextView
-                android:id="@+id/txtCategoria"
-                style="@style/title3"
-                android:text="@string/categoria" />
+
 
             <ListView
                 android:id="@+id/listviewCategoria"
                 android:layout_width="match_parent"
-                android:layout_height="761dp" />
-        </LinearLayout>
-    </ScrollView>
+                android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
 
     <include
         android:id="@+id/bottom_menu"
