--- a/app/src/main/res/layout/activity_busca.xml
+++ b/app/src/main/res/layout/activity_busca.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <include
         android:id="@+id/header"
@@ -22,12 +23,28 @@
         app:layout_constraintTop_toBottomOf="@+id/header"
         android:gravity="center_horizontal">
 
-        <SearchView
-            android:id="@+id/seachProduto"
-            android:layout_width="300dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColorHint="@color/gray"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginTop="8dp">
+
+            <ImageButton
+                android:id="@+id/btnSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_searchview"/>
+
+            <EditText
+                android:id="@+id/edtxtSearch"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:paddingBottom="0dp"/>
+
+        </LinearLayout>
 
         <View
             android:layout_height="1dp"
