--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/imgProduto"
@@ -118,13 +121,11 @@
                 android:id="@+id/txtSubtotal"
                 style="@style/textviewgray3"
                 android:layout_width="wrap_content"
-                android:layout_above="@+id/btnAdicionar"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="0dp"
-                android:layout_marginBottom="0dp"
+                android:layout_alignParentBottom="true"
                 android:text="@string/subtotal_000" />
 
-            <Button
+            <!--<Button
                 android:id="@+id/btnAdicionar"
                 style="@style/buttonAdicionar"
                 android:layout_alignParentEnd="true"
@@ -132,7 +133,7 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginBottom="0dp"
                 android:text="@string/adicionar_ao_carrinho"
-                android:textAllCaps="false" />
+                android:textAllCaps="false" />-->
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
