--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/principal_color</item>
-        <item name="colorPrimaryDark">@color/second_color</item>
+        <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/gray</item>
     </style>
 
