--- a/app/src/main/res/layout/activity_categoria.xml
+++ b/app/src/main/res/layout/activity_categoria.xml
@@ -15,7 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,22 +31,18 @@
             style="@style/title3"
             android:text="@string/categoria" />
 
-
-
             <ListView
                 android:id="@+id/listviewCategoria"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
     </LinearLayout>
 
-
-    <include
+    <FrameLayout
         android:id="@+id/bottom_menu"
         layout="@layout/bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
