--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -122,11 +122,12 @@
                 android:id="@+id/txtSubtotal"
                 style="@style/textviewgray3"
                 android:layout_width="wrap_content"
+                android:layout_above="@+id/btnAdicionar"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
                 android:text="@string/subtotal_000" />
 
-            <!--<Button
+            <Button
                 android:id="@+id/btnAdicionar"
                 style="@style/buttonAdicionar"
                 android:layout_alignParentEnd="true"
@@ -134,7 +135,7 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginBottom="0dp"
                 android:text="@string/adicionar_ao_carrinho"
-                android:textAllCaps="false" />-->
+                android:textAllCaps="false" />
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
