--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -82,6 +82,34 @@
                 android:layout_width="wrap_content"
                 android:text="@string/historico_de_pedidos"/>
         </LinearLayout>
+
+        <View
+            android:layout_height="1dp"
+            android:background="@color/principal_color"
+            android:layout_width="200dp"/>
+
+        <LinearLayout
+            android:id="@+id/layoutLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:clickable="true">
+
+            <ImageButton
+                android:id="@+id/imgbtnLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_logout"
+                android:layout_marginRight="15dp"/>
+
+            <TextView
+                style="@style/textviewblack"
+                android:layout_width="wrap_content"
+
+                android:text="@string/sair"/>
+        </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
