--- a/app/src/main/res/layout/activity_endereco.xml
+++ b/app/src/main/res/layout/activity_endereco.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,40 +26,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            
+
             <ImageButton
                 android:id="@+id/imgLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_location"/>
-            
+
             <TextView
                 android:id="@+id/txtLocation"
                 style="@style/textviewred"
                 android:text="@string/localizacao_atual"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
-        
+
         <EditText
             android:id="@+id/edtxtLogradouro"
             style="@style/editTextGray"
+            android:layout_marginBottom="0dp"
             android:hint="@string/logradouro"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edtxtCep"
-                style="@style/editTextGray1"
-                android:hint="@string/cep"/>
-
-            <EditText
-                android:id="@+id/edtxtNumero"
-                style="@style/editTextGray2"
-                android:hint="@string/numero"/>
-        </LinearLayout>
+        <EditText
+            android:id="@+id/edtxtComplemento"
+            style="@style/editTextGray"
+            android:hint="@string/complemento"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,9 +62,9 @@
                 android:hint="@string/bairro"/>
 
             <EditText
-                android:id="@+id/edtxtComplemento"
+                android:id="@+id/edtxtNumero"
                 style="@style/editTextGray2"
-                android:hint="@string/complemento"/>
+                android:hint="@string/numero"/>
         </LinearLayout>
 
         <LinearLayout
