--- a/app/src/main/res/layout/listview_historico.xml
+++ b/app/src/main/res/layout/listview_historico.xml
@@ -8,6 +8,7 @@
     android:padding="20dp">
 
     <LinearLayout
+        android:id="@+id/linearHistorico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
