--- a/app/src/main/res/layout/listview_carrinho.xml
+++ b/app/src/main/res/layout/listview_carrinho.xml
@@ -21,6 +21,7 @@
             android:id="@+id/imgProduto"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:scaleType="centerCrop"
             android:background="@color/gray_light" />
 
         <RelativeLayout
