--- a/app/src/main/res/layout/activity_carrinho.xml
+++ b/app/src/main/res/layout/activity_carrinho.xml
@@ -47,16 +47,12 @@
                 android:text="@string/limpar" />
         </RelativeLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxHeight="400dp">
 
             <ListView
                 android:id="@+id/listviewCarrinho"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </ScrollView>
+                android:layout_height="400dp"/>
+
 
         <TextView
             android:id="@+id/txtAddProduto"
